Fix the links to other pages and images

--- a/gamepage.html
+++ b/gamepage.html
@@ -9,18 +9,18 @@
 	<body>
 		<!-- Displays the navigation bar and the banner -->
 		<div class="banner">
-			<img src="css/1.png" alt="Logo"/>
+			<img src="css/1.PNG" alt="Logo"/>
 			<h1> Quiz Time </h1>
 		</div>
 		<div class="navigation">
 			<a href="index.html"> Home </a>
-			<a href="Ranking.html"> Ranking </a>
-			<a href="Login.html"> Login </a>
-			<a href="Register.html"> Register </a>
+			<a href="ranking.html"> Ranking </a>
+			<a href="login.html"> Login </a>
+			<a href="register.html"> Register </a>
 		</div>
 
     <!-- Contents of the page -->
-	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
 	<div class="grid">
 	<div id="container">
     <!-- start Quiz button -->
@@ -92,6 +92,7 @@
     <script src="game.js"></script>
 	</div>
 	</div>
-	<footer> Agnes Paullate Nyiranziza M00696201</footer>
+    <footer> Agnes Paullate Nyiranziza M00696201</footer>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 	</body>
     </html>
