--- a/register.html
+++ b/register.html
@@ -9,16 +9,15 @@
 	<body>
 		<!-- Displays the navigation bar and the banner -->
 		<div class="banner">
-			<img src="css/1.png" alt="Logo"/>
+			<img src="css/1.PNG" alt="Logo"/>
 			<h1> Quiz Time </h1>
 		</div>
 		<div class="navigation">
 			<a href="index.html"> Home </a>
-			<a href="Ranking.html"> Ranking </a>
-			<a href="Login.html"> Login </a>
+			<a href="ranking.html"> Ranking </a>
+			<a href="login.html"> Login </a>
 			<a class="selected" href="register.html"> Register </a>
-		</div>
-		<script src = "js/register.js"></script>
+		</div>		
 		<center>
 		  <div class="container" >
 			<h1>Register</h1>
@@ -53,5 +52,6 @@
 		  </div>
 		</center>
 		<footer> Agnes Paullate Nyiranziza M00696201</footer>
+		<script src = "js/register.js"></script>
 </body>
 </html>
