--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 	<body>
 		<!-- Displays the navigation bar and the banner -->
 		<div class="banner">
-			<img src="css/1.png" alt="Logo"/>
+			<img src="css/1.PNG" alt="Logo"/>
 			<h1> Quiz Time </h1>
 		</div>
 		<div class="navigation">
 			<a class="selected" href="HomePage.html"> Home </a>
-			<a href="Ranking.html"> Ranking </a>
-			<a href="Login.html"> Login </a>
-			<a href="Register.html"> Register </a>
+			<a href="ranking.html"> Ranking </a>
+			<a href="login.html"> Login </a>
+			<a href="register.html"> Register </a>
 		</div>
 		<!-- Contents of the page -->
 		<!-- Start of slide show container -->
