--- a/login.html
+++ b/login.html
@@ -9,14 +9,14 @@
 	<body>
 		<!-- Displays the navigation bar and the banner -->
 		<div class="banner">
-			<img src="css/1.png" alt="Logo"/>
+			<img src="css/1.PNG" alt="Logo"/>
 			<h1> Quiz Time </h1>
 		</div>
 		<div class="navigation">
 			<a href="index.html"> Home </a>
 			<a href="ranking.html"> Ranking </a>
 			<a class="selected" href="login.html"> Login </a>
-			<a href="Register.html"> Register </a>
+			<a href="register.html"> Register </a>
 		</div>
 	<!-- Contents of the Login page -->
 	<center>
@@ -44,4 +44,4 @@
 	<script src = "js/login.js"></script>
 	<footer> Agnes Paullate Nyiranziza M00696201</footer>
 	</body>
-    </html>
+</html>
