--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
 		</div>
 	<!-- Contents of the Login page -->
 	<center>
-	  <div id="loginPara" class="container">
+	  <form id="loginPara" class="container">
 		<h1>Login</h1>
 		<center>
 		<hr>
@@ -40,7 +40,7 @@
 		<br>
 		<a href="register.html">Dont have an account? Create one!</a>
 		</center>
-	  </div>
+	</form>
 	<script src = "js/login.js"></script>
 	<footer> Agnes Paullate Nyiranziza M00696201</footer>
 	</body>
