--- a/register.html
+++ b/register.html
@@ -19,7 +19,7 @@
 			<a class="selected" href="register.html"> Register </a>
 		</div>		
 		<center>
-		  <div class="container" >
+		  <form class="container" >
 			<h1>Register</h1>
 			<center>
 			<hr>
@@ -27,7 +27,7 @@
 			<input type="text" name="uname" placeholder="Please enter your username" id="uname" required>
 			<br>
 			<label for="phone"><b>Telephone</b></label>
-			<input type="number" name="phone" id="phone" placeholder="Please enter your telephone number" pattern="[0-9]{8}" required>
+			<input type="tel" name="phone" id="phone" placeholder="Please enter your telephone number" pattern="[0-9]{8}" required>
 			<br>
 			<label for="email"><b>Email</b></label>
 			<input type="text" name="email" id="email" placeholder="Please enter your email" required>
@@ -49,7 +49,7 @@
 			<center><button type ="submit" id="MyButton">Register</button></center>
 			<p id="Result"></p>
 			
-		  </div>
+		  </form>
 		</center>
 		<footer> Agnes Paullate Nyiranziza M00696201</footer>
 		<script src = "js/register.js"></script>
