--- a/index.html
+++ b/index.html
@@ -8,11 +8,35 @@
   <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- Modal -->
+  <div id="modal">
+    <div class="form-box">
+      <div class="button-box">
+        <div id="btn"></div>
+        <button type="button" class="toggle-btn" onclick="login()">Login</button>
+        <button type="button" class="toggle-btn" onclick="register()">Register</button>
+      </div>
+      <form id="login" class="input-group">
+        <input type="text" class="input-field" id="login-email" placeholder="Email" required>
+        <input type="password" class="input-field" id="login-password" placeholder="Enter password" required>
+        <button type="submit" class="submit-btn" id="login-btn">Login</button>
+      </form>
+      <form id="register" class="input-group">
+        <input type="text" class="input-field" placeholder="First Name" required>
+        <input type="text" class="input-field" placeholder="Last Name" required>
+        <input type="email" class="input-field" placeholder="Email" required>
+        <input type="password" class="input-field" placeholder="Enter password" required>
+        <input type="password" class="input-field" placeholder="Confirm password" required>
+        <button type="submit" class="submit-btn" onclick="submitRegistration()">Register</button>
+      </form>
+    </div>
+  </div>
   <main>
     <div class="header">
       <h2>Quiz Time</h2>
     </div>
     <div class="main">
+
       <div class="final">
         <h3>You answered all of the questions!</h3>
         <p>Score: </p><p class="score"></p>
@@ -28,7 +52,7 @@
           <input type="radio" checked="checked" name="radio">
           <span class="checkmark"></span>
         </label>
-        <label id="a2" class="container">
+        <label id="a2" class="container">email
           <input type="radio" name="radio">
           <span class="checkmark"></span>
         </label>
@@ -80,6 +104,7 @@
       </div>
     </div>
   </main>
+  <script src="./quiz/register.js"></script>
   <script type="module" src="index.js"></script>
 </body>
 </html>
