Prevent the default submit button behavior

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <button type="submit" class="submit-btn" id="login-btn">Login</button>
       </form>
       <form id="register" class="input-group">
-        <input type="text" class="input-field" placeholder="First Name" required>
-        <input type="text" class="input-field" placeholder="Last Name" required>
-        <input type="email" class="input-field" placeholder="Email" required>
-        <input type="password" class="input-field" placeholder="Enter password" required>
-        <input type="password" class="input-field" placeholder="Confirm password" required>
-        <button type="submit" class="submit-btn" onclick="submitRegistration()">Register</button>
+        <input type="text" class="input-field" id="first-name" placeholder="First Name" required>
+        <input type="text" class="input-field" id="last-name" placeholder="Last Name" required>
+        <input type="email" class="input-field" id="register-email" placeholder="Email" required>
+        <input type="password" class="input-field" id="register-password" placeholder="Enter password" required>
+        <input type="password" class="input-field" id="confirm-password" placeholder="Confirm password" required>
+        <button type="submit" class="submit-btn" id="register-btn">Register</button>
       </form>
     </div>
   </div>
