--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <main>
     <div class="header">
       <h2>Quiz Time</h2>
+      <button id="logout">Logout</button>
     </div>
     <div class="main">
 
